cambios barra de navegacion

--- a/src/main/resources/templates/inventory.html
+++ b/src/main/resources/templates/inventory.html
@@ -23,7 +23,8 @@
 			<li class="nav-item"><a class="nav-link active"
 				aria-current="page" href="#">Inventory</a></li>
 			<li class="nav-item"><a class="nav-link" href="#" th:href="@{/shoppingCart/sell}">Shopping Cart</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+			<li class="nav-item"><a class="nav-link disabled" href="#"
+				tabindex="-1" aria-disabled="true">Sales</a></li>
 			<li class="nav-item"><a class="nav-link disabled" href="#"
 				tabindex="-1" aria-disabled="true">Disabled</a></li>
 		</ul>
