--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -21,7 +21,8 @@
 			<li class="nav-item"><a class="nav-link active"
 				aria-current="page" href="#" th:href="@{/showproducts}">Inventory</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Shopping Cart</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+			<li class="nav-item"><a class="nav-link disabled" href="#"
+				tabindex="-1" aria-disabled="true">Sales</a></li>
 			<li class="nav-item"><a class="nav-link disabled" href="#"
 				tabindex="-1" aria-disabled="true">Disabled</a></li>
 		</ul>
