--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -19,12 +19,11 @@
 	<header>
 		<ul class="nav nav-pills nav-justified">
 			<li class="nav-item"><a class="nav-link active"
-				aria-current="page" href="#" th:href="@{/showproducts}">Inventory</a></li>
+				aria-current="page" href="#" th:href="@{/productcontroller/showproducts}">Inventory</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Shopping Cart</a></li>
 			<li class="nav-item"><a class="nav-link disabled" href="#"
-				tabindex="-1" aria-disabled="true">Sales</a></li>
-			<li class="nav-item"><a class="nav-link disabled" href="#"
-				tabindex="-1" aria-disabled="true">Disabled</a></li>
+				tabindex="-1" aria-disabled="true">Sales(coming soon)</a></li>
+			<li class="nav-item"><a class="nav-link" href="#" th:href="@{/login}">Logout</a></li>
 		</ul>
 
 	</header>
